--- a/README.textile
+++ b/README.textile
@@ -32,6 +32,12 @@ Run @thor yardoc:generate@ in the sources directory and open doc/index.html in y
 
 You can also check the "Rango examples project":http://github.com/botanicus/rango-examples
 
+h1. Terminology
+
+Rango is deeply inspirated by Django, so it adopt also it's terminology. It's very important to know, that Django differ between project and application. Project is the whole site, application is part of site. Application is basically plugin, but the plugin can have it's own URLS and templates. It may be blog, forum, or just API for generating feeds.
+
+You also may be confused by names of parts of MVC. View in Django is function which handle the request, not the HTML, which is called template. Django hasn't controller, it use just functions defined usually in views.py. Rango has controllers, because it provides functions as before filters or just enable you to namespace the views. So in Rango, controller is class which contains the views.
+
 h1. Usage
 
 <pre>
